--- a/Random Password Generator/styles.css
+++ b/Random Password Generator/styles.css
@@ -52,6 +52,7 @@ h3{
 }
 #n1{
     text-align: center;
+    min-width: 14%;
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 5px;
     background-color: #f2f2f2;
